# csv2xml

./: Cargo.toml
converter/: Cargo.toml
converter/src/: convert.rs  encoding.rs  lib.rs
converter/tests/: test_converter.rs
converter/tests/data/: test_cases.json
converter/tests/data/expected_outputs/: empty_lines.xml  extra_columns.xml  missing_columns.xml
converter/tests/data/inputs/: empty_lines.tsv  extra_columns.tsv  missing_columns.tsv
encoding/: Cargo.toml
encoding/src/: lib.rs
src/: main.rs
tests/: main_tests.rs  test_main.rs
tests/data/: tab_delimited.csv
tests/data/expected_outputs/: empty_lines.xml
tests/data/inputs/: empty_lines.tsv
