[package]
name = "csv2xml"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["encoding", "converter"]

[dependencies]
encoding = { path = "encoding" }
converter = { path = "converter" }
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.7"
xmltree = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.13.0"

